Add question index to response